autumn/tests/compile-fail/repository_invalid_policy_type.stderr
error[E0277]: the trait bound `NotAPolicy: Policy<Widget>` is not satisfied
  --> tests/compile-fail/repository_invalid_policy_type.rs:30:65
   |
30 | #[autumn_web::repository(Widget, api = "/api/widgets", policy = NotAPolicy)]
   |                                                                 ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Policy<Widget>` is not implemented for `NotAPolicy`
  --> tests/compile-fail/repository_invalid_policy_type.rs:28:1
   |
28 | pub struct NotAPolicy;
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__autumn_assert_policy`
  --> tests/compile-fail/repository_invalid_policy_type.rs:30:1
   |
30 | #[autumn_web::repository(Widget, api = "/api/widgets", policy = NotAPolicy)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__autumn_assert_policy`
   = note: this error originates in the attribute macro `autumn_web::repository` (in Nightly builds, run with -Z macro-backtrace for more info)
